@startuml
'https://plantuml.com/class-diagram

class Score {
    +sumar(Enemigo : enemigo): void
}

abstract class Enemigo {
    +recibirAtaque(Defensa : defensa): void
    +destruirse(): void
    +atacar(Jugador : jugador): void
}

class Hormiga {
    +destruirse(): void
    +atacar(Jugador : jugador): void
}

class Araña {
    +destruirse(): void
    +atacar(Jugador : jugador): void
}

class Daño {
    +atacar(Jugador : jugador): void
}

class Velocidad {
    +moverse(): void
}

Enemigo <|-- Hormiga
Enemigo <|-- Araña
Enemigo *--> Daño
Enemigo *--> Velocidad
Enemigo "0..*" <--  Score
Enemigo *--> Vida

@enduml